Bugfix : sizing problem on small screens

--- a/client/web/web/media/style/menu.css
+++ b/client/web/web/media/style/menu.css
@@ -5,6 +5,7 @@
 	z-index: 1000;
 	width: 100%;
 	height: 33%;
+	min-height: 150px;
 	background: rgba(0,0,0,0.8);
 }
 
@@ -27,7 +28,7 @@
 }
 
 .menuContainer_entry h3 {
-	height: 15%;
+	height: 1.5em;
 	padding: 0;
 	margin: 0;
 }
